@@ -2,7 +2,6 @@ package com.codelap.api.service.study;
 
 import com.codelap.common.bookmark.service.BookmarkService;
 import com.codelap.common.study.domain.*;
-import com.codelap.common.study.dto.GetStudiesCardDto;
 import com.codelap.common.studyComment.service.StudyCommentService;
 import com.codelap.common.studyView.service.StudyViewService;
 import com.codelap.common.user.domain.User;
@@ -14,13 +13,18 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 
 import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static com.codelap.common.study.domain.StudyDifficulty.NORMAL;
+import static com.codelap.common.study.domain.StudyStatus.OPENED;
 import static com.codelap.common.study.domain.TechStack.*;
+import static com.codelap.common.study.dto.GetStudiesCardDto.GetStudyInfo;
+import static com.codelap.common.study.dto.GetStudiesCardDto.GetTechStackInfo;
 import static org.assertj.core.api.Assertions.assertThat;
 
 @SpringBootTest
@@ -48,10 +52,9 @@ class DefaultStudyQueryAppServiceTest {
     private User leader;
 
     private User member;
-    private List<TechStack> techStackList;
+    private List<StudyTechStack> techStackList;
     private Study study1;
     private Study study2;
-
     @Test
     void 유저가_참여한_스터디_조회_성공() {
         UserCareer career = UserCareer.create("직무", 1);
@@ -60,38 +63,42 @@ class DefaultStudyQueryAppServiceTest {
 
         유저가_참여한_스터디_조회_스터디_생성(leader);
 
-        List<GetStudiesCardDto.GetStudyInfo> allStudies = studyQueryDslAppService.getAttendedStudiesByUser(member);
+        List<TechStack> studyTechStack = new ArrayList<>();
+        studyTechStack.add(React);
 
-        Map<Long, List<GetStudiesCardDto.GetTechStackInfo>> techStacksMap = studyQueryDslAppService.getTechStacks(스터디_아이디_리스트_가져오기(allStudies))
+        List<GetStudyInfo> allStudies = studyQueryDslAppService.getAttendedStudiesByUser(member, "open", studyTechStack);
+
+        Map<Long, List<GetTechStackInfo>> techStacksMap = studyQueryDslAppService.getTechStacks(스터디_아이디_리스트_가져오기(allStudies))
                 .stream()
-                .collect(Collectors.groupingBy(GetStudiesCardDto.GetTechStackInfo::getStudyId));
+                .collect(Collectors.groupingBy(GetTechStackInfo::getStudyId));
 
         allStudies.forEach(it -> it.setTechStackList(techStacksMap.get(it.getStudyId())));
 
+        List<Study> studyList = studyRepository.findAll()
+                .stream()
+                .filter(study -> study.getStatus() == OPENED)
+                .filter(study -> study.containsMember(member))
+                .filter(study -> study.getTechStackList()
+                        .stream()
+                        .anyMatch(techStack -> techStack.getTechStack().equals(React)))
+                .collect(Collectors.toList());
+
         IntStream.range(0, allStudies.size())
                 .forEach(index -> {
-                    GetStudiesCardDto.GetStudyInfo study = allStudies.get(index);
+                    GetStudyInfo study = allStudies.get(index);
 
-                    List<TechStack> techStacksByStudy = study.getTechStackList()
-                            .stream()
-                            .map(getTechStackDto -> getTechStackDto.getTechStackList())
-                            .collect(Collectors.toList());
+                    assertThat(study.getStudyId()).isEqualTo(studyList.get(index).getId());
+                    assertThat(study.getBookmarkCount()).isEqualTo(studyList.get(index).getBookmarks().size());
+                    assertThat(study.getCommentCount()).isEqualTo(studyList.get(index).getComments().size());
+                    assertThat(study.getViewCount()).isEqualTo(studyList.get(index).getViews().size());
 
-                    if (index == 0) {
-                        assertThat(study.getCommentCount()).isEqualTo(study1.getComments().size());
-                        assertThat(study.getViewCount()).isEqualTo(study1.getViews().size());
-                        assertThat(study.getBookmarkCount()).isEqualTo(study1.getBookmarks().size());
-                        assertThat(techStacksByStudy).isEqualTo(study1.getTechStackList());
-                    } else if (index == 1) {
-                        assertThat(study.getCommentCount()).isEqualTo(study2.getComments().size());
-                        assertThat(study.getViewCount()).isEqualTo(study2.getViews().size());
-                        assertThat(study.getBookmarkCount()).isEqualTo(study2.getBookmarks().size());
-                        assertThat(techStacksByStudy).isEqualTo(study2.getTechStackList());
-                    }
+                    IntStream.range(0, study.getTechStackList().size()).forEach(j -> {
+                        assertThat(study.getTechStackList().get(j).getTechStack()).isEqualTo(studyList.get(index).getTechStackList().get(j).getTechStack());
+                    });
                 });
     }
 
-    private List<Long> 스터디_아이디_리스트_가져오기(List<GetStudiesCardDto.GetStudyInfo> allStudies) {
+    private List<Long> 스터디_아이디_리스트_가져오기(List<GetStudyInfo> allStudies) {
         return allStudies.stream().map(study -> study.getStudyId()).collect(Collectors.toList());
     }
 
@@ -99,9 +106,9 @@ class DefaultStudyQueryAppServiceTest {
         StudyPeriod period = StudyPeriod.create(OffsetDateTime.now(), OffsetDateTime.now().plusMinutes(10));
         StudyNeedCareer needCareer = StudyNeedCareer.create("직무", 1);
 
-        techStackList = List.of(Spring, Java);
+        techStackList = Arrays.asList(new StudyTechStack(Spring), new StudyTechStack(Java));
 
-        study1 = studyRepository.save(Study.create("팀", "설명", 4, NORMAL, period, needCareer, leader, List.of(Spring, Java)));
+        study1 = studyRepository.save(Study.create("팀", "설명", 4, NORMAL, period, needCareer, leader, Arrays.asList(new StudyTechStack(React), new StudyTechStack(Java))));
 
         study1.addMember(member);
 
@@ -109,11 +116,8 @@ class DefaultStudyQueryAppServiceTest {
         studyViewService.create(study1.getId(), "1.1.1.1");
         bookmarkService.create(study1.getId(), member.getId());
 
-        study2 = studyRepository.save(Study.create("팀", "설명", 4, NORMAL, period, needCareer, leader, List.of(JavaScript, React)));
+        study2 = studyRepository.save(Study.create("팀", "설명", 4, NORMAL, period, needCareer, leader, Arrays.asList(new StudyTechStack(JavaScript), new StudyTechStack(React))));
 
         study2.addMember(member);
-
-        studyCommentService.create(study2.getId(), member.getId(), "message");
-        studyViewService.create(study2.getId(), "1.1.1.2");
     }
 }
